--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -3,6 +3,9 @@
         <wb-resource deploy-path="/" source-path="/target/m2e-wtp/web-resources"/>
         <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
+        <dependent-module archiveName="jcoord-1.0.jar" deploy-path="/WEB-INF/lib" handle="module:/classpath/lib//Library/Java/Extensions/jcoord-1.0.jar">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
         <property name="context-root" value="sensor-rest-service"/>
         <property name="java-output-path" value="/sensor-rest-service/build/classes"/>
     </wb-module>
